# sodglumate-rs

./: CONTRIBUTING  Cargo.toml  DCO  Makefile  README.md
.github/workflows/: dco.yml
src/: api.rs  app.rs  config.rs  main.rs  types.rs
src/beat/: mod.rs
src/breathing/: mod.rs
src/browser/: mod.rs
src/coach/: mod.rs
src/gateway/: mod.rs
src/media/: mod.rs
src/reactor/: event.rs  mod.rs  queue.rs  scheduler.rs
src/settings/: mod.rs
src/view/: breathing.txt  island.rs  legal.txt  mod.rs  text_utils.rs
