[package]
name = "sodglumate-rs"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
accelerate = [
    "candle-core/accelerate",
    "candle-nn/accelerate",
    "candle-transformers/accelerate",
]

[dependencies]
eframe = { version = "0.29.1", features = ["persistence"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
rand = "0.9.2"
indexmap = "2.13.0"
cpal = "0.15"
toml = "0.8.19"
directories = "6.0.0"
candle-core = { version = "0.9.2" }
candle-nn = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
tokenizers = "0.21.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
